[package]
name = "lox"
authors = ["Joshua Wong"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["wrap_help", "derive", "cargo"] }
