[package]
name = "lox"
version = "0.1.0"
authors = ["Joshua Wong"]
categories = ["compilers", "parser-implementations"]
edition = "2021"
keywords = ["lox", "interpreter", "language"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/jwong101/lox"
description = "A simple Lox interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["wrap_help", "derive", "cargo"] }
thiserror = "1.0.31"

[dev-dependencies]
pretty_assertions = "1.2.1"
